--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -25,13 +25,11 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Setup poetry
-        run: pip install poetry==2.0.1
+      - name: Install latest uv and set Python version
+        uses: astral-sh/setup-uv@v6
 
-      - name: Install dependencies
-        run: |
-          poetry config virtualenvs.create false
-          poetry install
+      - name: Build package
+        run: uv build
 
       - name: Run tests
         run: make test
