--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -28,8 +28,9 @@ jobs:
       - name: Install latest uv and set Python version
         uses: astral-sh/setup-uv@v6
 
-      - name: Build package
-        run: uv build
+      - name: Install dependencies
+        run: |
+          uv sync
 
       - name: Run tests
         run: make test
@@ -44,36 +45,20 @@ jobs:
         with:
           ref: master
 
+      - name: Get version from master branch
+        run: echo "MASTER_VERSION=$(grep version pyproject.toml | head -1 | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
+
+      # get current branch version
+      - name: Checkout to feature branch
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: "3.11"
 
       - name: Get version from feature branch
-        run: echo "MASTER_VERSION=$(grep version pyproject.toml | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
-
-      # - name: Get version from master branch
-      #   run: |
-      #     if [ -f "setup.py" ]; then
-      #       echo "MASTER_VERSION=$(grep -E 'version' splight_cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
-      #     else
-      #       echo "MASTER_VERSION=$(grep version pyproject.toml | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
-      #     fi
-
-      # get current branch version
-      - name: Checkout to feature branch
-        uses: actions/checkout@v3
-
-      - name: Get version from feature branch
-        run: echo "CURRENT_VERSION=$(grep version pyproject.toml | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
-
-      # - name: Get version from feature branch
-      #   run: |
-      #     if [ -f "setup.py" ]; then
-      #       echo "CURRENT_VERSION=$(grep -E 'version' cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
-      #     else
-      #       echo "CURRENT_VERSION=$(grep version pyproject.toml | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
-      #     fi
+        run: echo "CURRENT_VERSION=$(grep version pyproject.toml | head -1 | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
 
       # validate versions
       - name: Verify version is a valid release version
@@ -83,7 +68,4 @@ jobs:
         run: python .github/workflows/scripts/check_pypi_version.py ${{ env.CURRENT_VERSION }} $LIBRARY_NAME
 
       - name: Verify version is greater than master version
-        run: |
-          echo ${{ env.MASTER_VERSION }} 
-          echo ${{ env.CURRENT_VERSION }}
-          python .github/workflows/scripts/check_master_version.py ${{ env.MASTER_VERSION }} ${{ env.CURRENT_VERSION }}
+        run: python .github/workflows/scripts/check_master_version.py ${{ env.MASTER_VERSION }} ${{ env.CURRENT_VERSION }}
